[dev] fixed text contrasts, add alt to images, change <img> element to <picture> for serving smaller images on mobile view

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,3 +1,4 @@
+/*
 $header-hide-breakpoint: 960px;
 
 .header-menu-btn {
@@ -71,6 +72,115 @@ $header-hide-breakpoint: 960px;
   display: flex;
   justify-content: space-between;
   list-style: none;
+}
+
+.nav-anchor {
+  @include link-reset();
+  font-weight: 500;
+  font-size: 0.9rem;
+  color: inherit;
+  @media (max-width: $header-hide-breakpoint) {
+    font-weight: 700;
+    font-size: 0.9rem;
+    &:hover {
+      color: $dark-gray;
+    }
+  }
+}
+
+*/
+$header-hide-breakpoint: 960px;
+.header--mobile {
+  position: absolute;
+  top: 25px;
+  left: 40px;
+  display: none;
+  color: $white;
+  width: 50%;
+  @media (max-width: $header-hide-breakpoint) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu-btn {
+    &:hover,
+    &:focus {
+      animation: spin 0.35s ease-in-out;
+    }
+  }
+}
+.logo {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  padding-left: 5%;
+  position: absolute;
+  top: 5%;
+  color: $white;
+  transition: all 0.35s ease-in-out;
+  .header-logo {
+    padding-bottom: 8px;
+  }
+  .close-btn {
+    fill: $dark-gray;
+
+    &:hover,
+    &:focus {
+      fill: $very-dark-gray;
+      cursor: pointer;
+    }
+  }
+
+  & > .close-btn {
+    display: none;
+  }
+
+  @media (max-width: $header-hide-breakpoint) {
+    background-color: $white;
+    color: $black;
+    top: -50%;
+    width: 100%;
+    padding: 5vmax 5%;
+    & > .nav {
+      width: 80%;
+    }
+    & > .close-btn {
+      display: inline;
+    }
+    .header-logo {
+      display: none;
+    }
+  }
+}
+.mobile-header--active {
+  top: 0;
+}
+
+.header-logo {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: $white;
+}
+.nav {
+  width: 70%;
+}
+.nav-anchors {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  & > li {
+    border-bottom: 3px solid transparent;
+    padding-bottom: 8px;
+  }
+  & > li:hover {
+    border-color: $white;
+  }
 }
 
 .nav-anchor {
